# Viber_card

./: .gitignore  CONTRIBUTING.fr.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: inspect.rs
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  scoring.rs  snapshot.rs
src-tauri/src/scanner/: claude_code.rs  codex.rs  hermes.rs  mod.rs  ollama.rs
src/components/AllCards/: AllCards.tsx
src/components/CurrentDeck/: ArchetypeRules.tsx  ExportCardButton.tsx  FUTCard.tsx  RadarChart.tsx  StatsRecap.tsx  archetypeArt.ts  archetypeLore.ts  archetypeRules.ts  cardTheme.ts  statMeta.ts
src/components/EvolutionProgress/: EvolutionProgress.tsx  EvolutionRadarChart.tsx
src/hooks/: useImageDataUrl.ts
src/lib/: tauri-api.ts
src/styles/: globals.css
src/types/: stats.ts
